--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "start": "node ./src/app.js",
     "dev": "nodemon ./src/app.js",
+    "prettier": "prettier --write .",
+    "lint": "concurrently \"eslint ./src/*.js\" \"eslint ./src/**/*.js\"",
     "test": "NODE_ENV=test NODE_OPTIONS='--experimental-vm-modules' dotenv -e .env.test -- jest ./*.test.js"
   },
   "keywords": [],
@@ -15,6 +17,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
     "jest": "^27.5.1",
@@ -23,6 +26,13 @@
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.3",
     "postgres": "^1.0.2",
+    "prettier": "^2.5.1",
     "xss": "^1.0.10"
+  },
+  "devDependencies": {
+    "concurrently": "^7.0.0",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0",
+    "lint": "^0.7.0"
   }
 }
